mock/grammar/mock_parser.go
// Code generated from /Users/anqiansong/goland/go/go-zero/anqiansong/mock/grammar/MockParser.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // MockParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "'bool'", "'slice'", "'map'", "'spec'", "", "'('", "')'", "'{'",
	"'}'", "'['", "']'", "'.'", "';'", "','", "'='", "'<<'", "'>>'", "'#'",
	"'->'", "'<-'", "'-'",
}
var symbolicNames = []string{
	"", "BOOL_VALUE", "BOOL", "SLICE", "MAP", "SPEC", "LANG", "LPAREN", "RPAREN",
	"LBRACE", "RBRACE", "LBRACK", "RBRACK", "DOT", "SMICOLON", "COMMA", "ASSIGN",
	"QUOTE_LEFT", "QUOTE_RIGHT", "SHARP", "TO", "PUT", "BAR", "WS", "IDENT",
	"NUMBER", "PACKAGE", "VALUE", "ERRCHAR",
}

var ruleNames = []string{
	"mockExpression", "normalExpression", "presetExpr", "presetBoolExpr", "presetSliceExpr",
	"presetMapExpr", "presetSpecExpr", "numberExpr", "numberRangeExpr", "numberLengthExpr",
	"stringExpr", "stringRange", "stringLength", "stringTemplate", "customArgSpec",
	"customArg", "constStatement", "prevConst", "afterConst", "lengthSpec",
	"rangeSpec", "ignoreStatement",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type MockParser struct {
	*antlr.BaseParser
}

func NewMockParser(input antlr.TokenStream) *MockParser {
	this := new(MockParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "MockParser.g4"

	return this
}

// MockParser tokens.
const (
	MockParserEOF         = antlr.TokenEOF
	MockParserBOOL_VALUE  = 1
	MockParserBOOL        = 2
	MockParserSLICE       = 3
	MockParserMAP         = 4
	MockParserSPEC        = 5
	MockParserLANG        = 6
	MockParserLPAREN      = 7
	MockParserRPAREN      = 8
	MockParserLBRACE      = 9
	MockParserRBRACE      = 10
	MockParserLBRACK      = 11
	MockParserRBRACK      = 12
	MockParserDOT         = 13
	MockParserSMICOLON    = 14
	MockParserCOMMA       = 15
	MockParserASSIGN      = 16
	MockParserQUOTE_LEFT  = 17
	MockParserQUOTE_RIGHT = 18
	MockParserSHARP       = 19
	MockParserTO          = 20
	MockParserPUT         = 21
	MockParserBAR         = 22
	MockParserWS          = 23
	MockParserIDENT       = 24
	MockParserNUMBER      = 25
	MockParserPACKAGE     = 26
	MockParserVALUE       = 27
	MockParserERRCHAR     = 28
)

// MockParser rules.
const (
	MockParserRULE_mockExpression   = 0
	MockParserRULE_normalExpression = 1
	MockParserRULE_presetExpr       = 2
	MockParserRULE_presetBoolExpr   = 3
	MockParserRULE_presetSliceExpr  = 4
	MockParserRULE_presetMapExpr    = 5
	MockParserRULE_presetSpecExpr   = 6
	MockParserRULE_numberExpr       = 7
	MockParserRULE_numberRangeExpr  = 8
	MockParserRULE_numberLengthExpr = 9
	MockParserRULE_stringExpr       = 10
	MockParserRULE_stringRange      = 11
	MockParserRULE_stringLength     = 12
	MockParserRULE_stringTemplate   = 13
	MockParserRULE_customArgSpec    = 14
	MockParserRULE_customArg        = 15
	MockParserRULE_constStatement   = 16
	MockParserRULE_prevConst        = 17
	MockParserRULE_afterConst       = 18
	MockParserRULE_lengthSpec       = 19
	MockParserRULE_rangeSpec        = 20
	MockParserRULE_ignoreStatement  = 21
)

// IMockExpressionContext is an interface to support dynamic dispatch.
type IMockExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMockExpressionContext differentiates from other interfaces.
	IsMockExpressionContext()
}

type MockExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMockExpressionContext() *MockExpressionContext {
	var p = new(MockExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MockParserRULE_mockExpression
	return p
}

func (*MockExpressionContext) IsMockExpressionContext() {}

func NewMockExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MockExpressionContext {
	var p = new(MockExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MockParserRULE_mockExpression

	return p
}

func (s *MockExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *MockExpressionContext) NormalExpression() INormalExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INormalExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INormalExpressionContext)
}

func (s *MockExpressionContext) StringTemplate() IStringTemplateContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStringTemplateContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStringTemplateContext)
}

func (s *MockExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MockExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MockExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.EnterMockExpression(s)
	}
}

func (s *MockExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.ExitMockExpression(s)
	}
}

func (s *MockExpressionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MockParserVisitor:
		return t.VisitMockExpression(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MockParser) MockExpression() (localctx IMockExpressionContext) {
	localctx = NewMockExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, MockParserRULE_mockExpression)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(46)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case MockParserBOOL, MockParserSLICE, MockParserMAP, MockParserSPEC, MockParserRPAREN, MockParserCOMMA, MockParserBAR, MockParserIDENT:
		{
			p.SetState(44)
			p.NormalExpression()
		}

	case MockParserQUOTE_LEFT, MockParserVALUE:
		{
			p.SetState(45)
			p.StringTemplate()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// INormalExpressionContext is an interface to support dynamic dispatch.
type INormalExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNormalExpressionContext differentiates from other interfaces.
	IsNormalExpressionContext()
}

type NormalExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNormalExpressionContext() *NormalExpressionContext {
	var p = new(NormalExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MockParserRULE_normalExpression
	return p
}

func (*NormalExpressionContext) IsNormalExpressionContext() {}

func NewNormalExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NormalExpressionContext {
	var p = new(NormalExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MockParserRULE_normalExpression

	return p
}

func (s *NormalExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *NormalExpressionContext) PresetExpr() IPresetExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPresetExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPresetExprContext)
}

func (s *NormalExpressionContext) NumberExpr() INumberExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INumberExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INumberExprContext)
}

func (s *NormalExpressionContext) StringExpr() IStringExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStringExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStringExprContext)
}

func (s *NormalExpressionContext) CustomArgSpec() ICustomArgSpecContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICustomArgSpecContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICustomArgSpecContext)
}

func (s *NormalExpressionContext) ConstStatement() IConstStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConstStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConstStatementContext)
}

func (s *NormalExpressionContext) IgnoreStatement() IIgnoreStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIgnoreStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIgnoreStatementContext)
}

func (s *NormalExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NormalExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NormalExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.EnterNormalExpression(s)
	}
}

func (s *NormalExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.ExitNormalExpression(s)
	}
}

func (s *NormalExpressionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MockParserVisitor:
		return t.VisitNormalExpression(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MockParser) NormalExpression() (localctx INormalExpressionContext) {
	localctx = NewNormalExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, MockParserRULE_normalExpression)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(48)
			p.PresetExpr()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(49)
			p.NumberExpr()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(50)
			p.StringExpr()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(51)
			p.CustomArgSpec()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(52)
			p.ConstStatement()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(53)
			p.IgnoreStatement()
		}

	}

	return localctx
}

// IPresetExprContext is an interface to support dynamic dispatch.
type IPresetExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPresetExprContext differentiates from other interfaces.
	IsPresetExprContext()
}

type PresetExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPresetExprContext() *PresetExprContext {
	var p = new(PresetExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MockParserRULE_presetExpr
	return p
}

func (*PresetExprContext) IsPresetExprContext() {}

func NewPresetExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PresetExprContext {
	var p = new(PresetExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MockParserRULE_presetExpr

	return p
}

func (s *PresetExprContext) GetParser() antlr.Parser { return s.parser }

func (s *PresetExprContext) PresetBoolExpr() IPresetBoolExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPresetBoolExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPresetBoolExprContext)
}

func (s *PresetExprContext) PresetSliceExpr() IPresetSliceExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPresetSliceExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPresetSliceExprContext)
}

func (s *PresetExprContext) PresetMapExpr() IPresetMapExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPresetMapExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPresetMapExprContext)
}

func (s *PresetExprContext) PresetSpecExpr() IPresetSpecExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPresetSpecExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPresetSpecExprContext)
}

func (s *PresetExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PresetExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PresetExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.EnterPresetExpr(s)
	}
}

func (s *PresetExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.ExitPresetExpr(s)
	}
}

func (s *PresetExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MockParserVisitor:
		return t.VisitPresetExpr(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MockParser) PresetExpr() (localctx IPresetExprContext) {
	localctx = NewPresetExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, MockParserRULE_presetExpr)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(61)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case MockParserRPAREN, MockParserCOMMA:
		p.EnterOuterAlt(localctx, 1)

	case MockParserBOOL:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(57)
			p.PresetBoolExpr()
		}

	case MockParserSLICE:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(58)
			p.PresetSliceExpr()
		}

	case MockParserMAP:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(59)
			p.PresetMapExpr()
		}

	case MockParserSPEC:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(60)
			p.PresetSpecExpr()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IPresetBoolExprContext is an interface to support dynamic dispatch.
type IPresetBoolExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPresetBoolExprContext differentiates from other interfaces.
	IsPresetBoolExprContext()
}

type PresetBoolExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPresetBoolExprContext() *PresetBoolExprContext {
	var p = new(PresetBoolExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MockParserRULE_presetBoolExpr
	return p
}

func (*PresetBoolExprContext) IsPresetBoolExprContext() {}

func NewPresetBoolExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PresetBoolExprContext {
	var p = new(PresetBoolExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MockParserRULE_presetBoolExpr

	return p
}

func (s *PresetBoolExprContext) GetParser() antlr.Parser { return s.parser }

func (s *PresetBoolExprContext) BOOL() antlr.TerminalNode {
	return s.GetToken(MockParserBOOL, 0)
}

func (s *PresetBoolExprContext) ASSIGN() antlr.TerminalNode {
	return s.GetToken(MockParserASSIGN, 0)
}

func (s *PresetBoolExprContext) BOOL_VALUE() antlr.TerminalNode {
	return s.GetToken(MockParserBOOL_VALUE, 0)
}

func (s *PresetBoolExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PresetBoolExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PresetBoolExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.EnterPresetBoolExpr(s)
	}
}

func (s *PresetBoolExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.ExitPresetBoolExpr(s)
	}
}

func (s *PresetBoolExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MockParserVisitor:
		return t.VisitPresetBoolExpr(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MockParser) PresetBoolExpr() (localctx IPresetBoolExprContext) {
	localctx = NewPresetBoolExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, MockParserRULE_presetBoolExpr)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)
		p.Match(MockParserBOOL)
	}
	{
		p.SetState(64)
		p.Match(MockParserASSIGN)
	}
	{
		p.SetState(65)
		p.Match(MockParserBOOL_VALUE)
	}

	return localctx
}

// IPresetSliceExprContext is an interface to support dynamic dispatch.
type IPresetSliceExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPresetSliceExprContext differentiates from other interfaces.
	IsPresetSliceExprContext()
}

type PresetSliceExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPresetSliceExprContext() *PresetSliceExprContext {
	var p = new(PresetSliceExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MockParserRULE_presetSliceExpr
	return p
}

func (*PresetSliceExprContext) IsPresetSliceExprContext() {}

func NewPresetSliceExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PresetSliceExprContext {
	var p = new(PresetSliceExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MockParserRULE_presetSliceExpr

	return p
}

func (s *PresetSliceExprContext) GetParser() antlr.Parser { return s.parser }

func (s *PresetSliceExprContext) SLICE() antlr.TerminalNode {
	return s.GetToken(MockParserSLICE, 0)
}

func (s *PresetSliceExprContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(MockParserLPAREN, 0)
}

func (s *PresetSliceExprContext) MockExpression() IMockExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMockExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMockExpressionContext)
}

func (s *PresetSliceExprContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(MockParserRPAREN, 0)
}

func (s *PresetSliceExprContext) NUMBER() antlr.TerminalNode {
	return s.GetToken(MockParserNUMBER, 0)
}

func (s *PresetSliceExprContext) COMMA() antlr.TerminalNode {
	return s.GetToken(MockParserCOMMA, 0)
}

func (s *PresetSliceExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PresetSliceExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PresetSliceExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.EnterPresetSliceExpr(s)
	}
}

func (s *PresetSliceExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.ExitPresetSliceExpr(s)
	}
}

func (s *PresetSliceExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MockParserVisitor:
		return t.VisitPresetSliceExpr(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MockParser) PresetSliceExpr() (localctx IPresetSliceExprContext) {
	localctx = NewPresetSliceExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, MockParserRULE_presetSliceExpr)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(67)
		p.Match(MockParserSLICE)
	}
	{
		p.SetState(68)
		p.Match(MockParserLPAREN)
	}
	p.SetState(71)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == MockParserNUMBER {
		{
			p.SetState(69)
			p.Match(MockParserNUMBER)
		}
		{
			p.SetState(70)
			p.Match(MockParserCOMMA)
		}

	}
	{
		p.SetState(73)
		p.MockExpression()
	}
	{
		p.SetState(74)
		p.Match(MockParserRPAREN)
	}

	return localctx
}

// IPresetMapExprContext is an interface to support dynamic dispatch.
type IPresetMapExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPresetMapExprContext differentiates from other interfaces.
	IsPresetMapExprContext()
}

type PresetMapExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPresetMapExprContext() *PresetMapExprContext {
	var p = new(PresetMapExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MockParserRULE_presetMapExpr
	return p
}

func (*PresetMapExprContext) IsPresetMapExprContext() {}

func NewPresetMapExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PresetMapExprContext {
	var p = new(PresetMapExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MockParserRULE_presetMapExpr

	return p
}

func (s *PresetMapExprContext) GetParser() antlr.Parser { return s.parser }

func (s *PresetMapExprContext) MAP() antlr.TerminalNode {
	return s.GetToken(MockParserMAP, 0)
}

func (s *PresetMapExprContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(MockParserLPAREN, 0)
}

func (s *PresetMapExprContext) NUMBER() antlr.TerminalNode {
	return s.GetToken(MockParserNUMBER, 0)
}

func (s *PresetMapExprContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(MockParserCOMMA)
}

func (s *PresetMapExprContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(MockParserCOMMA, i)
}

func (s *PresetMapExprContext) AllMockExpression() []IMockExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IMockExpressionContext)(nil)).Elem())
	var tst = make([]IMockExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IMockExpressionContext)
		}
	}

	return tst
}

func (s *PresetMapExprContext) MockExpression(i int) IMockExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMockExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IMockExpressionContext)
}

func (s *PresetMapExprContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(MockParserRPAREN, 0)
}

func (s *PresetMapExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PresetMapExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PresetMapExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.EnterPresetMapExpr(s)
	}
}

func (s *PresetMapExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.ExitPresetMapExpr(s)
	}
}

func (s *PresetMapExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MockParserVisitor:
		return t.VisitPresetMapExpr(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MockParser) PresetMapExpr() (localctx IPresetMapExprContext) {
	localctx = NewPresetMapExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, MockParserRULE_presetMapExpr)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(76)
		p.Match(MockParserMAP)
	}
	{
		p.SetState(77)
		p.Match(MockParserLPAREN)
	}
	{
		p.SetState(78)
		p.Match(MockParserNUMBER)
	}
	{
		p.SetState(79)
		p.Match(MockParserCOMMA)
	}
	{
		p.SetState(80)
		p.MockExpression()
	}
	{
		p.SetState(81)
		p.Match(MockParserCOMMA)
	}
	{
		p.SetState(82)
		p.MockExpression()
	}
	{
		p.SetState(83)
		p.Match(MockParserRPAREN)
	}

	return localctx
}

// IPresetSpecExprContext is an interface to support dynamic dispatch.
type IPresetSpecExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPresetSpecExprContext differentiates from other interfaces.
	IsPresetSpecExprContext()
}

type PresetSpecExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPresetSpecExprContext() *PresetSpecExprContext {
	var p = new(PresetSpecExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MockParserRULE_presetSpecExpr
	return p
}

func (*PresetSpecExprContext) IsPresetSpecExprContext() {}

func NewPresetSpecExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PresetSpecExprContext {
	var p = new(PresetSpecExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MockParserRULE_presetSpecExpr

	return p
}

func (s *PresetSpecExprContext) GetParser() antlr.Parser { return s.parser }

func (s *PresetSpecExprContext) SPEC() antlr.TerminalNode {
	return s.GetToken(MockParserSPEC, 0)
}

func (s *PresetSpecExprContext) ASSIGN() antlr.TerminalNode {
	return s.GetToken(MockParserASSIGN, 0)
}

func (s *PresetSpecExprContext) VALUE() antlr.TerminalNode {
	return s.GetToken(MockParserVALUE, 0)
}

func (s *PresetSpecExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PresetSpecExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PresetSpecExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.EnterPresetSpecExpr(s)
	}
}

func (s *PresetSpecExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MockParserListener); ok {
		listenerT.ExitPresetSpecExpr(s)
	}
}
